<resources>
    <string name="app_name">facial</string>
    <string-array name="item_option">
        <item>Change</item>
        <item>Deleted</item>
        <item>Cancel</item>
    </string-array>
    <string-array name="item_option_profile">
        <item>Deleted</item>
        <item>Cancel</item>
    </string-array>
    <string name="amcalendar_select">Select</string>
    <string name="amcalendar_please_select_date">Please select date</string>
    <string name="amcalendar_please_select_date_range">Please select date range</string>
    <string name="amcalendar_template_today">Today</string>
    <string name="amcalendar_template_tomorrow">Tomorrow</string>
    <string name="amcalendar_template_yesterday">Yesterday</string>
    <string name="amcalendar_template_last_week">Last week</string>
    <string name="amcalendar_template_last_month">Last month</string>
    <string name="amcalendar_monday_short">MON</string>
    <string name="amcalendar_tuesday_short">TUE</string>
    <string name="amcalendar_wednesday_short">WED</string>
    <string name="amcalendar_thursday_short">THU</string>
    <string name="amcalendar_friday_short">FRI</string>
    <string name="amcalendar_saturday_short">SAT</string>
    <string name="amcalendar_sunday_short">SUN</string>
    <string name="text_label_1">Breath Exercise</string>
    <string name="text_label_2">Article</string>
    <string name="text_label_3">Dejour</string>
    <string name="text_label_4">Calendar</string>
    <string name="text_label_5">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navbar">NavbarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_notification_reminder">Dejour</string>
    <string name="description_notification_reminder">How was your day</string>

    <string name="reminders_notification_channel_id">1</string>

</resources>