<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/ic_hale"
        android:title="@string/text_label_1" />
    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/ic_article"
        android:title="@string/text_label_2"/>
    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/ic_dejour"
        android:title="@string/text_label_3"/>
    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/text_label_4"/>
    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/text_label_5"/>
</menu>